Revert "Fix long URL overflowing messages on desktop"
http://image.noelshack.com/fichiers/2015/42/1445091043-screenshot-2015-10-17-16-10-22.png
http://image.noelshack.com/fichiers/2015/42/1445091248-screenshot-2015-10-17-16-13-51.png

This reverts commit b8cc3ad915f2d129457b9b2c55e019b554917547.

--- a/public/style.css
+++ b/public/style.css
@@ -1346,7 +1346,6 @@ h1, h2, h3 {
 .message__content {
   padding: 0 9px;
   word-wrap: break-word;
-  word-break: break-all;
   border: 1px solid transparent; /* pour prendre en compte margin de .message__content-text > p */
 }
 
